配置处理使用其他方案